--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="social-media">
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/yuriletras/yuriletras"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
@@ -118,7 +118,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Entre em <span>Contato</span></h2>
 
-        <form id="contactForm" action="http://localhost:3001/send-email" method="POST">
+        <form id="contactForm" action="yuri-contact-api.onrender.com/send-email" method="POST">
             <div class="input-box">
                 <input type="text" name="nome" placeholder="Nome Completo" required>
                 <input type="email" name="email" placeholder="Endereço de Email" required>
