Atualiza URL do formulário para o backend do Render e ajusta script JS

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Entre em <span>Contato</span></h2>
 
-        <form id="contactForm" action="yuri-contact-api.onrender.com/send-email" method="POST">
+        <form id="contactForm" action="https://yuri-contact-api.onrender.com/send-email" method="POST">
             <div class="input-box">
                 <input type="text" name="nome" placeholder="Nome Completo" required>
                 <input type="email" name="email" placeholder="Endereço de Email" required>
