feat: Aprimora legibilidade do texto da seção Home e ajusta espaçamento entre seções

--- a/index.html
+++ b/index.html
@@ -28,30 +28,29 @@
             <h3>Olá, eu sou</h3>
             <h1>Yuri Barbosa</h1>
             <h3>E eu sou um <span class="text-animation">Desenvolvedor</span></h3>
-            <p>Uma breve descrição sobre você, suas paixões e o que você faz. Ex: "Sou um desenvolvedor front-end apaixonado por criar experiências web intuitivas e performáticas."</p>
+            <p>Sou um Desenvolvedor Full Stack com experiência na construção de aplicações web completas, do design da interface à lógica de servidor e integração com APIs. Minha paixão é transformar ideias em soluções digitais robustas e intuitivas, combinando um forte domínio em desenvolvimento front-end com a capacidade de criar e gerenciar sistemas de back-end eficientes.</p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="http://www.linkedin.com/in/yuri-basi"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/yuriletras/yuriletras"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="#about" class="btn">Ler Mais</a>
         </div>
 
-        <div class="home-img">
-            <img src="your_image.png" alt="Sua Imagem de Perfil">
-        </div>
+       
     </section>
 
     <section class="about" id="about">
         <h2 class="heading">Sobre <span>Mim</span></h2>
         <div class="about-content">
             <h3>Quem sou eu?</h3>
-            <p>Detalhe mais sobre sua jornada, sua formação, o que te motiva, e como você chegou até aqui. Pode ser um ou dois parágrafos.</p>
-            <p>Aborde suas qualidades, como proatividade, trabalho em equipe, e sua paixão por aprender novas tecnologias.</p>
-            <a href="#" class="btn">Ler Mais</a>
+            <p>Sou um Desenvolvedor Full Stack com formação em Análise e Desenvolvimento de Sistemas, apaixonado por construir soluções digitais completas. Minha atuação foca na comunicação clara e eficaz, buscando sempre a melhor solução para o cliente, do conceito à implementação.</p>
+            <p>Possuo sólidas habilidades em desenvolvimento front-end com HTML, CSS e JavaScript, criando interfaces de usuário intuitivas e responsivas. No back-end, trabalho com Node.js para desenvolver APIs robustas e gerenciar a lógica de servidor. Essa combinação me permite integrar conhecimentos de diversas áreas e entregar um atendimento completo e personalizado.</p>
+            <p>Minha experiência anterior em liderança e suporte em empresas de telecomunicações e tecnologia me proporcionou um amplo conhecimento em gestão de equipes, resolução de problemas e desenvolvimento de projetos, competências que aplico para otimizar o ciclo de vida do desenvolvimento de software.</p> 
+            <p>Estou sempre buscando aprimorar minhas habilidades e conhecimentos, acompanhando as últimas tendências do mercado para oferecer um serviço de alta qualidade e contribuir significativamente para o sucesso dos projetos.</p>
+            <a href="#" class="btn">Download CV</a>
         </div>
     </section>
 
