--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="about-container">
             <div class="about-image">
                 <img src="img/yuri_about.png" alt="Foto de Perfil de Yuri Barbosa na Seção Sobre Mim">
+                
             </div>
             <div class="about-content">
                 <h3>Quem sou eu?</h3>
@@ -141,112 +142,157 @@
     </section>
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Meus <span>Projetos</span></h2>
+    <h2 class="heading">Meus <span>Projetos</span></h2>
 
-        <div class="portfolio-container" id="portfolioContainer">
-            <div class="portfolio-box">
-                <img src="./img/portfolio1.PNG" alt="Miniatura do Projeto de Portfólio">
-                <div class="portfolio-layer">
-                    <h4>Meu Portfólio Pessoal</h4>
-                    <p>Este é o meu portfólio pessoal, desenvolvido com HTML, CSS e JavaScript para apresentar minhas habilidades e projetos.</p>
-                    <a href="https://yuriletras.github.io/yuribarbosa/" target="_blank"><i class="bx bx-link-external"></i></a>
+    <div class="portfolio-container" id="portfolioContainer">
+        <div class="portfolio-box" 
+             data-project-img="./img/portfolio1.PNG"
+             data-project-title="Meu Portfólio Pessoal"
+             data-project-description="Este é o meu portfólio pessoal, desenvolvido com HTML, CSS e JavaScript para apresentar minhas habilidades e projetos."
+             data-project-link="https://yuriletras.github.io/yuribarbosa/">
+            <img src="./img/portfolio1.PNG" alt="Miniatura do Projeto de Portfólio">
+            <div class="portfolio-layer">
+                <h4>Meu Portfólio Pessoal</h4>
+                <p>Este é o meu portfólio pessoal, desenvolvido com HTML, CSS e JavaScript para apresentar minhas habilidades e projetos.</p>
                 </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/project2.png" alt="Projeto 2">
-                <div class="portfolio-layer">
-                    <h4>Nome do projeto 2</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/project3.png" alt="Projeto 3">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/project4.png" alt="Projeto 4">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/project5.png" alt="Projeto 5">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/project6.png" alt="Projeto 6">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/project7.png" alt="Projeto 7">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div><div class="portfolio-box">
-                <img src="img/project8.png" alt="Projeto 8">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div><div class="portfolio-box">
-                <img src="img/project9.png" alt="Projeto 9">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div><div class="portfolio-box">
-                <img src="img/project10.png" alt="Projeto 10">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div><div class="portfolio-box">
-                <img src="img/project11.png" alt="Projeto 11">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div><div class="portfolio-box">
-                <img src="img/project12.png" alt="Projeto 12">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div><div class="portfolio-box">
-                <img src="img/project13.png" alt="Projeto 13">
-                <div class="portfolio-layer">
-                    <h4>UI/UX Design</h4>
-                    <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/projeto 2.PNG"
+             data-project-title="YB Tasks"
+             data-project-description="Este é um sistema web para gerenciamento de tarefas do 'YB Talks', que exige autenticação de usuário através de uma página de login para acesso à sua funcionalidade principal."
+             data-project-link="#">
+            <img src="img/projeto 2.PNG" alt="Projeto 2">
+            <div class="portfolio-layer">
+                <h4>YB Tasks</h4>
+                <p>Este é um sistema web para gerenciamento de tarefas do 'YB Talks', que exige autenticação de usuário através de uma página de login para acesso à sua funcionalidade principal.</p>
             </div>
         </div>
-        <div class="portfolio-button-container">
-            <a href="#" class="btn" id="viewAllProjectsBtn">Ver Todos</a>
+        <div class="portfolio-box" 
+             data-project-img="img/project3.png"
+             data-project-title="UI/UX Design - Projeto 3"
+             data-project-description="Esta é uma descrição mais detalhada do Projeto 3, mostrando os desafios de UI/UX e as soluções implementadas."
+             data-project-link="#">
+            <img src="img/project3.png" alt="Projeto 3">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
         </div>
-    </section>
+        <div class="portfolio-box" 
+             data-project-img="img/project4.png"
+             data-project-title="UI/UX Design - Projeto 4"
+             data-project-description="Esta é uma descrição mais detalhada do Projeto 4, focando na experiência do usuário e design de interface."
+             data-project-link="#">
+            <img src="img/project4.png" alt="Projeto 4">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project5.png"
+             data-project-title="UI/UX Design - Projeto 5"
+             data-project-description="Descrição detalhada do Projeto 5, explorando o processo criativo e as ferramentas utilizadas."
+             data-project-link="#">
+            <img src="img/project5.png" alt="Projeto 5">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project6.png"
+             data-project-title="UI/UX Design - Projeto 6"
+             data-project-description="Detalhes do Projeto 6, incluindo o estudo de caso e os resultados alcançados no design."
+             data-project-link="#">
+            <img src="img/project6.png" alt="Projeto 6">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project7.png"
+             data-project-title="UI/UX Design - Projeto 7"
+             data-project-description="Uma análise aprofundada do Projeto 7, destacando a interação e a usabilidade."
+             data-project-link="#">
+            <img src="img/project7.png" alt="Projeto 7">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project8.png"
+             data-project-title="UI/UX Design - Projeto 8"
+             data-project-description="Visão geral do Projeto 8, abordando a estética e a funcionalidade do design."
+             data-project-link="#">
+            <img src="img/project8.png" alt="Projeto 8">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project9.png"
+             data-project-title="UI/UX Design - Projeto 9"
+             data-project-description="Descrição do Projeto 9, com foco nos wireframes e protótipos desenvolvidos."
+             data-project-link="#">
+            <img src="img/project9.png" alt="Projeto 9">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project10.png"
+             data-project-title="UI/UX Design - Projeto 10"
+             data-project-description="Estudo de caso do Projeto 10, detalhando a pesquisa de usuário e os insights obtidos."
+             data-project-link="#">
+            <img src="img/project10.png" alt="Projeto 10">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project11.png"
+             data-project-title="UI/UX Design - Projeto 11"
+             data-project-description="Visão detalhada do Projeto 11, incluindo o ciclo de vida do design e as iterações."
+             data-project-link="#">
+            <img src="img/project11.png" alt="Projeto 11">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project12.png"
+             data-project-title="UI/UX Design - Projeto 12"
+             data-project-description="Exploração do Projeto 12, com foco na arquitetura da informação e navegação."
+             data-project-link="#">
+            <img src="img/project12.png" alt="Projeto 12">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+        <div class="portfolio-box" 
+             data-project-img="img/project13.png"
+             data-project-title="UI/UX Design - Projeto 13"
+             data-project-description="Análise do Projeto 13, cobrindo o feedback dos usuários e as melhorias resultantes."
+             data-project-link="#">
+            <img src="img/project13.png" alt="Projeto 13">
+            <div class="portfolio-layer">
+                <h4>UI/UX Design</h4>
+                <p>Breve descrição do projeto e as tecnologias utilizadas.</p>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-button-container">
+        <a href="#" class="btn" id="viewAllProjectsBtn">Ver Todos</a>
+    </div>
+</section>
 
     <section class="contact" id="contact">
         <h2 class="heading">Entre em <span>Contato</span></h2>
@@ -266,21 +312,29 @@
     </section>
 
     <footer class="footer">
-        <div class="footer-icons">
-            <a href="http://www.linkedin.com/in/yuri-basi"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://github.com/yuriletras/yuriletras"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
+    <div class="footer-content-wrapper">
+        <div class="footer-left-content">
+            <img src="img/g.png" alt="Seu Logo ou Foto no Footer" class="footer-logo-img">
+            <p class="footer-slogan">Vivendo, aprendendo e evoluindo um dia de cada vez.</p>
         </div>
 
-        <div class="footer-text">
-            <img src="img/marca dagua 2.png" alt="Descrição da Foto" class="footer-logo">
-            <p>Copyright © 2025 by Yuri Barbosa | Todos os direitos reservados.</p>
+        <div class="footer-right-content">
+            <h3 class="footer-social-heading">SOCIAL</h3>
+            <div class="footer-social-links">
+                <a href="http://www.linkedin.com/in/yuri-basi"_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/yuriletras/yuriletras" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="URL_DO_SEU_TWITTER" target="_blank"><i class='bx bxl-twitter'></i></a>
+                <a href="URL_DO_SEU_YOUTUBE" target="_blank"><i class='bx bxl-youtube'></i></a>
+                </div>
         </div>
+    </div>
 
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
-    </footer>
+    <hr class="footer-divider">
+
+    <div class="footer-copyright">
+        <p>Copyright &copy; 2025 by Yuri Barbosa | All Rights Reserved.</p>
+    </div>
+</footer>
 
     <div id="skill-modal" class="skill-modal">
         <div class="skill-modal-content">
@@ -330,8 +384,25 @@
         <div id="desc-java">
             <h4>Java</h4>
             <p>Sou proficiente em programação Java, desenvolvendo aplicações empresariais e sistemas robustos com foco em orientação a objetos (POO). Tenho experiência com Spring Boot para construção de APIs, gerenciamento de dependências, e integração com bancos de dados relacionais via JPA/Hibernate. Aplico boas práticas de código, testes unitários e design patterns para garantir a qualidade e manutenibilidade das soluções.</p>
+        
         </div>
     </div>
+
+    <div id="projectModal" class="project-modal-overlay">
+    <div class="project-modal-content">
+        <span class="project-modal-close-btn">&times;</span>
+        <div class="project-modal-body">
+            <div class="project-modal-image-container">
+                <img src="" alt="Imagem do Projeto" id="projectModalImage">
+            </div>
+            <div class="project-modal-details">
+                <h3 id="projectModalTitle">Título do Projeto</h3>
+                <p id="projectModalDescription">Descrição completa do projeto.</p>
+                <a href="#" id="projectModalLink" target="_blank" class="btn project-modal-btn">Ver Projeto <i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
