--- a/index.html
+++ b/index.html
@@ -72,75 +72,55 @@
             <div class="skill-item" data-skill-id="html">
                 <i class='bx bxl-html5'></i>
                 <h3>HTML</h3>
-                <p class="skill-description">Domínio em HTML5 para estruturação semântica e acessível de conteúdo web.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="css">
                 <i class='bx bxl-css3'></i>
                 <h3>CSS</h3>
-                <p class="skill-description">Criação de estilos responsivos e visualmente atraentes, utilizando CSS3 e pré-processadores.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="javascript">
                 <i class='bx bxl-javascript'></i>
                 <h3>JavaScript</h3>
-                <p class="skill-description">Experiência em lógica de programação e desenvolvimento de funcionalidades interativas para a web.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="react">
                 <i class='bx bxl-react'></i>
                 <h3>React</h3>
-                <p class="skill-description">Construção de interfaces de usuário modernas e eficientes com a biblioteca React.js.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="bootstrap">
                 <i class='bx bxl-bootstrap'></i>
                 <h3>Bootstrap</h3>
-                <p class="skill-description">Utilização do framework Bootstrap para desenvolvimento front-end rápido e responsivo.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="git">
                 <i class='bx bxl-git'></i>
                 <h3>Git</h3>
-                <p class="skill-description">Controle de versão de projetos com Git, gerenciando histórico e colaboração de código.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="github">
                 <i class='bx bxl-github'></i>
                 <h3>GitHub</h3>
-                <p class="skill-description">Plataforma de colaboração para versionamento de código e gerenciamento de projetos em equipe.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="figma">
                 <i class='bx bxl-figma'></i>
                 <h3>Figma</h3>
-                <p class="skill-description">Criação de designs de interface de usuário (UI) e protótipos interativos.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="nodejs">
                 <i class='bx bxl-nodejs'></i>
                 <h3>Node.js</h3>
-                <p class="skill-description">Desenvolvimento de aplicações back-end escaláveis e APIs com Node.js.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
 
             <div class="skill-item" data-skill-id="java">
                 <i class='bx bxl-java'></i>
                 <h3>Java</h3>
-                <p class="skill-description">Programação orientada a objetos para aplicações robustas e sistemas empresariais.</p>
-                <span class="read-more-btn">Ver Detalhes</span>
             </div>
         </div>
     </section>
-
+    
     <section class="portfolio" id="portfolio">
     <h2 class="heading">Meus <span>Projetos</span></h2>
 
@@ -336,14 +316,13 @@
     </div>
 </footer>
 
-    <div id="skill-modal" class="skill-modal">
+    <div id="skillModal" class="skill-modal"> 
         <div class="skill-modal-content">
             <span class="skill-modal-close-btn">&times;</span>
-            <h3 id="modal-skill-title"></h3>
-            <p id="modal-skill-description"></p>
+            <h3 id="skillModalTitle"></h3>
+            <p id="skillModalDescription"></p>
         </div>
     </div>
-
     <div id="full-skill-descriptions" style="display: none;">
         <div id="desc-html">
             <h4>HTML</h4>
