--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <footer class="footer">
     <div class="footer-content-wrapper">
         <div class="footer-left-content">
-            <img src="img/g.png" alt="Seu Logo ou Foto no Footer" class="footer-logo-img">
+            <img src="img/ybarbosa.png" alt="Seu Logo ou Foto no Footer" class="footer-logo-img">
             <p class="footer-slogan">Vivendo, aprendendo e evoluindo um dia de cada vez.</p>
         </div>
 
