--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio - Yuri Barbosa</title>
+    <title>Yuri Portfólio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800;900&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -28,7 +28,7 @@
 
     <section class="home" id="home">
         <div class="home-image">
-            <img src="img/yuri_perfil.png" alt="Foto de Perfil de Yuri Barbosa">
+            <img src="img/yu_setup.jpg" alt="Foto de Perfil de Yuri Barbosa">
         </div>
 
         <div class="home-content">
@@ -52,7 +52,7 @@
 
         <div class="about-container">
             <div class="about-image">
-                <img src="img/yuri_about.png" alt="Foto de Perfil de Yuri Barbosa na Seção Sobre Mim">
+                <img src="img/yuri_perfil.png" alt="Foto de Perfil de Yuri Barbosa na Seção Sobre Mim">
                 
             </div>
             <div class="about-content">
