--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="social-media">
                 <a href="http://www.linkedin.com/in/yuri-basi"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/yuriletras/yuriletras"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-youtube'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
+                
             </div>
 
             <a href="#about" class="btn">Ler Mais</a>
@@ -303,8 +305,8 @@
             <div class="footer-social-links">
                 <a href="http://www.linkedin.com/in/yuri-basi"_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/yuriletras/yuriletras" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="URL_DO_SEU_TWITTER" target="_blank"><i class='bx bxl-twitter'></i></a>
-                <a href="URL_DO_SEU_YOUTUBE" target="_blank"><i class='bx bxl-youtube'></i></a>
+                <a href="URL_DO_SEU_TWITTER" target="_blank"><i class='bx bxl-youtube'></i></a>
+                <a href="URL_DO_SEU_YOUTUBE" target="_blank"><i class='bx bxl-instagram'></i></a>
                 </div>
         </div>
     </div>
