--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">
-            <img src="img/marca dagua 2 copia logo.png" alt="Logo Yuri Barbosa" class="main-logo">
-        </a>
+    <a href="#" class="logo">
+        <img src="img/marca dagua 2 copia logo.png" alt="Logo Yuri Barbosa" class="main-logo">
+    </a>
 
-        <div id="menu-icon" class="bx bx-menu"></div>
-        <nav class="navbar">
-            <a href="#home" class="active">Início</a>
-            <a href="#about">Sobre Mim</a>
-            <a href="#skills">Habilidades</a>
-            <a href="#portfolio">Portfólio</a>
-            <a href="#contact">Contato</a>
-        </nav>
-        <div id="theme-toggle" class="bx bx-moon"></div>
-    </header>
+    <div id="menu-icon" class="bx bx-menu"></div>
+    <nav class="navbar">
+        <a href="#home" class="active">Início</a>
+        <a href="#about">Sobre Mim</a>
+        <a href="#skills">Habilidades</a>
+        <a href="#portfolio">Portfólio</a>
+        <a href="#contact">Contato</a>
+        <a href="blog/index.html" class="navbar-link">Blog</a> </nav>
+    <div id="theme-toggle" class="bx bx-moon"></div>
+</header>
 
     <section class="home" id="home">
         <div class="home-image">
@@ -69,59 +69,67 @@
     </section>
 
     <section class="skills" id="skills">
-        <h2 class="heading">Minhas <span>Habilidades</span></h2>
-        <div class="skills-grid">
-            <div class="skill-item" data-skill-id="html">
-                <i class='bx bxl-html5'></i>
-                <h3>HTML</h3>
-            </div>
+    <h2 class="heading">Minhas <span>Habilidades</span></h2>
 
-            <div class="skill-item" data-skill-id="css">
-                <i class='bx bxl-css3'></i>
-                <h3>CSS</h3>
-            </div>
+    <div class="skill-categories-buttons">
+        <button class="category-btn active" data-category="frontend">Frontend</button>
+        <button class="category-btn" data-category="backend">Backend</button>
+        <button class="category-btn" data-category="devops">DevOps</button>
+    </div>
 
-            <div class="skill-item" data-skill-id="javascript">
-                <i class='bx bxl-javascript'></i>
-                <h3>JavaScript</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="react">
-                <i class='bx bxl-react'></i>
-                <h3>React</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="bootstrap">
-                <i class='bx bxl-bootstrap'></i>
-                <h3>Bootstrap</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="git">
-                <i class='bx bxl-git'></i>
-                <h3>Git</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="github">
-                <i class='bx bxl-github'></i>
-                <h3>GitHub</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="figma">
-                <i class='bx bxl-figma'></i>
-                <h3>Figma</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="nodejs">
-                <i class='bx bxl-nodejs'></i>
-                <h3>Node.js</h3>
-            </div>
-
-            <div class="skill-item" data-skill-id="java">
-                <i class='bx bxl-java'></i>
-                <h3>Java</h3>
-            </div>
+    <div id="frontend-skills" class="skills-grid active-skills-grid">
+        <div class="skill-item" data-skill-id="html">
+            <i class='bx bxl-html5'></i>
+            <h3>HTML</h3>
         </div>
-    </section>
+        <div class="skill-item" data-skill-id="css">
+            <i class='bx bxl-css3'></i>
+            <h3>CSS</h3>
+        </div>
+        <div class="skill-item" data-skill-id="javascript">
+            <i class='bx bxl-javascript'></i>
+            <h3>JavaScript</h3>
+        </div>
+        <div class="skill-item" data-skill-id="react">
+            <i class='bx bxl-react'></i>
+            <h3>React</h3>
+        </div>
+        <div class="skill-item" data-skill-id="bootstrap">
+            <i class='bx bxl-bootstrap'></i>
+            <h3>Bootstrap</h3>
+        </div>
+        <div class="skill-item" data-skill-id="figma">
+            <i class='bx bxl-figma'></i>
+            <h3>Figma</h3>
+        </div>
+    </div>
+
+    <div id="backend-skills" class="skills-grid">
+        <div class="skill-item" data-skill-id="nodejs">
+            <i class='bx bxl-nodejs'></i>
+            <h3>Node.js</h3>
+        </div>
+        <div class="skill-item" data-skill-id="java">
+            <i class='bx bxl-java'></i>
+            <h3>Java</h3>
+        </div>
+        </div>
+
+    <div id="devops-skills" class="skills-grid">
+        <div class="skill-item" data-skill-id="git">
+            <i class='bx bxl-git'></i>
+            <h3>Git</h3>
+        </div>
+        <div class="skill-item" data-skill-id="github">
+            <i class='bx bxl-github'></i>
+            <h3>GitHub</h3>
+        </div>
+        <div class="skill-item" data-skill-id="vercel">
+            <i class='bx bxs-cloud'></i>
+            <h3>Vercel</h3>
+        </div>
+        </div>
+</section>
     
     <section class="portfolio" id="portfolio">
     <h2 class="heading">Meus <span>Projetos</span></h2>
@@ -279,18 +287,30 @@
     <section class="contact" id="contact">
         <h2 class="heading">Entre em <span>Contato</span></h2>
 
-        <form id="contactForm" action="https://yuri-contact-api.onrender.com/send-email" method="POST">
-            <div class="input-box">
-                <input type="text" name="nome" placeholder="Nome Completo" required>
-                <input type="email" name="email" placeholder="Endereço de Email" required>
+        <div class="contact-content-wrapper"> <div class="contact-left">
+                <p class="contact-phrase-main">Bora tirar suas ideias do papel?</p>
+                <p class="contact-phrase-sub">Me chama pra gente bater um papo sobre seu projeto e como posso te ajudar a chegar lá!</p>
+                
+                <div class="call-to-action-box">
+                    <span>Solicitar orçamento</span>
+                    <i class='bx bx-right-arrow-alt'></i> </div>
             </div>
-            <div class="input-box">
-                <input type="text" name="telefone" placeholder="Número de Celular">
-                <input type="text" name="assunto" placeholder="Assunto do Email">
+
+            <div class="contact-right">
+                <form id="contactForm" action="https://yuri-contact-api.onrender.com/send-email" method="POST">
+                    <div class="input-box">
+                        <input type="text" name="nome" placeholder="Nome Completo" required>
+                        <input type="email" name="email" placeholder="Endereço de Email" required>
+                    </div>
+                    <div class="input-box">
+                        <input type="text" name="telefone" placeholder="Número de Celular">
+                        <input type="text" name="assunto" placeholder="Assunto do Email">
+                    </div>
+                    <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua Mensagem" required></textarea>
+                    <input type="submit" value="Enviar Mensagem" class="btn">
+                </form>
             </div>
-            <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua Mensagem" required></textarea>
-            <input type="submit" value="Enviar Mensagem" class="btn">
-        </form>
+        </div>
     </section>
 
     <footer class="footer">
