atualizaçoes do admin

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a href="#portfolio">Portfólio</a>
         <a href="#contact">Contato</a>
         <a href="blog/index.html" class="navbar-link">Blog</a> </nav>
+        <a href="admin/login.html" class="nav-link" title="Administração do Blog">
+            <i class='bx bx-cog'></i> </a>
     <div id="theme-toggle" class="bx bx-moon"></div>
 </header>
 
